fix: navbar buttons visible in safari

--- a/src/components/modus-wc-navbar/modus-wc-navbar.scss
+++ b/src/components/modus-wc-navbar/modus-wc-navbar.scss
@@ -6,6 +6,10 @@ modus-wc-navbar .modus-wc-navbar {
   // Common button styles
   modus-wc-button {
     display: inline-flex;
+
+    svg {
+      height: 32px;
+    }
   }
 
   .modus-wc-btn.modus-wc-btn-borderless.modus-wc-btn-primary {
